# gcl

./: .clangd  .gitignore  CMakeLists.txt  conanfile.txt
Include/: endian.hpp  file.hpp  opcodes.hpp
doc/interpreter/: VM.md
sample/: sample.gcl
spec/: Architecture.md  Format.md
src/interpreter/: CMakeLists.txt  main.cc
src/interpreter/VM/: vm.cc  vm.hpp
src/interpreter/VM/Instructions/: instructions.cc  instructions.hpp
src/libgcl/: CMakeLists.txt  file.cc
